# meshtastic-telemetry-daemon-rs

./: .gitignore  92-usb-input-no-powersave.rules  Cargo.toml  Changes.md  Cross.toml  LICENSE.md  README.md  example_config.toml  install.sh  mesh-telem.service  mesh-telem433.service  mesh-telem915.service  meshtastic-serial.path  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: release-package.yml
.sqlx/: query-255fffb37d1db500adc7af4350701626be02fefa4306f681c1ec1d69f6c5155f.json  query-2e244df8186bd9a52e35ced59ee91b4f03624941648aca19e15abc2c8055accc.json  query-39a9200b2fe540e073ab4b0465979a6e8aa734fc409f36a709a09fc2b5f0b44c.json  query-4a195198bc414b631f097499d85fcbc6ce7899308d02f54df1ae1d9ffd3e7095.json  query-4b7bdcbc43e912372c9b07517b553a7bea222724a51e94aa84303bc18fdeae5f.json  query-564b4c18e995a026b9f308921dc6034f4190374289670236bd930cd6b3df1a69.json  query-5e2979e3c39f3b3b65ee8ce6f0b0ea952be1843f2e27fad12b532d10073289ff.json  query-66e9a250be67ee81f876978d7f978335a12a2f5af4ad928ed26aa045176ae0e3.json  query-6ec2dcd214c0f5287397d6e6ae1b70eb177c651027aff25808385e45a858d234.json  query-77419591f4ce1b1b7551b409e444778292ba82e422c96559359114aaf1bc0b57.json  query-77d8204820fe21ac605972fb45ef91023ee45f866667e4704fc85be15851553f.json  query-7a85a2b09bf4b824e28f809fea701adc74cb3a5e135ce2724cf56eb0da108f89.json  query-81f2a910ce72083b8fb712198d49c5098fb194cc178daece11887e41e23a558e.json  query-887f9f7cf7a2795452d675e0552e3cd8c70b847e970e5e1bd1545964ed7316c0.json  query-8e389d2bf4cacb0a070b87f6082eaece2abaf71c681f504a8402b9862c7ace0f.json  query-92047165fc66deb2fd6552ae4f04125adcd4434f7d3f69fe8600bf08d2080c10.json  query-95b2aad2288b538a02d08887502540b7ad5df4f0ec2fc078a73df8441190ad94.json  query-97dd471e6a6f4c48540ee41a3389ac649b009a9a3afa80783ece4c68099b63c9.json  query-aa593b8ae0064ea6f3aa9467275d689a18052a45dd2eaffc516fba5f3eb9519b.json  query-b27d4c459ee5faab8bc9c10776108ac1452d3a287979e5cc3dcf293d417b161c.json  query-bfb939fea9d607b7e8e76c609d55d75c6f861f63b238bb43da4993140dff8c6d.json  query-cfa08337861d71025b4cb439ddc2e9b613290c471f476ff3a1249d6c3298c3db.json  query-da91196a2309461605add32bf0674996b87b4131596832a38ba2e85298f2d0f8.json
arednpkgs/: README.md  kmod-nls-base_5.15.150-1_mips_24kc.ipk  kmod-phy-ath79-usb_5.15.150-1_mips_24kc.ipk  kmod-usb-acm_5.15.150-1_mips_24kc.ipk  kmod-usb-core_5.15.150-1_mips_24kc.ipk  kmod-usb-ehci_5.15.150-1_mips_24kc.ipk  kmod-usb2_5.15.150-1_mips_24kc.ipk  libsqlite3-0_3410200-1_mips_24kc.ipk
src/: db_poster.rs  main.rs  packet_handler.rs  types.rs  utilities.rs
src/db/: connection.rs  inserts.rs  lite.rs  mod.rs  postgres.rs
src/dto/: mod.rs  packet_handler.rs  types.rs
src/dto/dbops/: airqualitymetrics.rs  devicemetrics.rs  environmentmetrics.rs  errormetrics.rs  localstats.rs  mod.rs  neighborinfo.rs  nodeinfo.rs  powermetrics.rs
src/dto/entities/: airqualitymetrics.rs  devicemetrics.rs  environmentmetrics.rs  errormetrics.rs  localstats.rs  mod.rs  neighborinfo.rs  nodeinfo.rs  prelude.rs
src/dto/models/: airqualitymetric.rs  devicemetric.rs  environmentmetric.rs  errormetric.rs  localstat.rs  mod.rs  neighborinfo.rs  nodeinfo.rs
src/entities/: airqualitymetrics.rs  devicemetrics.rs  environmentmetrics.rs  localstats.rs  mod.rs  neighborinfo.rs  nodeinfo.rs  prelude.rs
src/util/: config.rs  example_config.toml  log.rs  mod.rs  state.rs  types.rs
