[package]
name = "meshtastic-telemetry-daemon-rs"
version = "0.1.12"
edition = "2024"
license = "MIT"
authors = ["Gatlin Newhouse"]
description = "Daemon to read Meshtastic packets and send telemetry to postgres"
keywords = ["OpenWRT", "AREDN", "Meshtastic"]
readme = "./README.md"
repository = "https://github.com/coffee-and-telesense/meshtastic-telemetry-daemon-rs"
categories = ["command-line-utils"]

[dependencies]
# Handle errors gracefully
anyhow = { version = "1.0", default-features = false }
# Handle clocks, no wasm. "now" enables "std"
chrono = { version = "0.4", default-features = false, features = [
  "now",
] }
# Debug logger
colog = { version = "1.3", optional = true }
# Handle config reading
config = { version = "0.15", default-features = false, features = [
  "async",
  "toml",
] }
# tokio-console
console-subscriber = { version = "0.5", optional = true }
# Derive new functions for structs
derive-new = { version = "0.7", default-features = false }
# Logger
log = { version = "0.4", default-features = false }
# My fork of the meshtastic protocol library with updated protobufs---no serde
meshtastic = { git = "https://github.com/gatlinnewhouse/meshtastic-rust.git", branch = "stable-science", default-features = false, features = [
  "tokio",
  "serde",
] }
# Config directory handling
microxdg = { version = "0.2" }
# Serialize/deserialize, add deriving trait
serde = { version = "1.0", default-features = false, features = ["derive"] }
# Serialize/deserialze json, mainly print debugging
serde_json = { version = "1.0", default-features = false, features = ["std"] }
# Postgres connection
sqlx = { version = "0.8", default-features = false, features = [
  "postgres",
  "chrono",
  "macros",
  "json",
] }
# Release logger
syslog = { version = "7.0", optional = true }
# Async runtime with tokio::main macro
tokio = { version = "1.43", features = [
  "macros",
] }

[features]
default = ["debug", "native-tls", "trace"]

# stdout/logging config:
colog = ["dep:colog"]
syslog = ["dep:syslog"]

# Debugging features
debug = ["anyhow/std", "anyhow/backtrace", "colog"] # print state and backtraces
log_perf = [] # print async runtime stats behind feature flag
print-packets = [] # pretty print packets
trace = [
  "dep:console-subscriber",
  "tokio/tracing",
] # print tracing and include tokio-console support

# TLS config:
native-tls = ["sqlx/runtime-tokio-native-tls"]
rustls = ["sqlx/runtime-tokio-rustls"]

# Specific shorthand targets
alpine = ["syslog", "native-tls"]
beaglebone = ["rustls", "colog"]

[profile.dev]
debug = true
panic = "unwind"
strip = false

# Separate profile for profiling code
[profile.profiling]
inherits = "dev"
codegen-units = 1
debug = true
opt-level = 's'   # use loop vectorization instead of not with 'z'?
panic = "unwind"
strip = false

# This release profile was found in discussions when compiling for mips platforms
# But it probably works on x86 and ARM devices as well, we will see
[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = 's'   # use loop vectorization instead of not with 'z'?
panic = "abort"
strip = true
