[package]
name = "meshtastic-telemetry-daemon-rs"
version = "0.3.0"
edition = "2024"
license = "MIT"
authors = ["Gatlin Newhouse"]
description = "Daemon to read Meshtastic packets and send telemetry to postgres"
keywords = ["OpenWRT", "AREDN", "Meshtastic"]
readme = "./README.md"
repository = "https://github.com/coffee-and-telesense/meshtastic-telemetry-daemon-rs"
categories = ["command-line-utils"]

[dependencies]
# Handle errors gracefully
anyhow = { version = "1.0", default-features = false }
# Handle clocks, no wasm. "now" enables "std"
chrono = { version = "0.4", default-features = false, features = ["now"] }
# Debug logger
colog = { version = "1.4", optional = true }
# Handle config reading
config = { version = "0.15", default-features = false, features = [
  "async",
  "toml",
] }
# tokio-console
console-subscriber = { version = "0.5", optional = true }
# Derive new functions for structs
derive-new = { version = "0.7", default-features = false }
# Logger
log = { version = "0.4", default-features = false }
# My fork of the meshtastic protocol library with updated protobufs---no serde
meshtastic = { git = "https://github.com/gatlinnewhouse/meshtastic-rust.git", branch = "stable-science-bytes", default-features = false, features = [
  "tokio",
] }
# Config directory handling
microxdg = { version = "0.2" }
# Serialize/deserialize, add deriving trait
serde = { version = "1.0", default-features = false, features = ["derive"] }
# Serialize/deserialze json, mainly print debugging
serde_json = { version = "1.0", default-features = false, features = ["std"] }
# Postgres connection
sqlx = { version = "0.8", default-features = false, features = [
  "postgres",
  "chrono",
  "macros",
  "json",
] }
# Release logger
syslog = { version = "7.0", optional = true }
# Async runtime with tokio::main macro
tokio = { version = "1.49", features = ["macros"] }

[features]
default = ["debug", "native-tls"]

# stdout/logging config:
colog = ["dep:colog"]
syslog = ["dep:syslog"]

# Debugging features
debug = ["anyhow/std", "anyhow/backtrace", "colog"] # print state and backtraces
log_perf = [] # print async runtime stats behind feature flag
print-packets = [] # pretty print packets
trace = [
  "dep:console-subscriber",
  "tokio/tracing",
] # print tracing and include tokio-console support

# TLS config:
native-tls = ["sqlx/runtime-tokio-native-tls"]
rustls = ["sqlx/runtime-tokio-rustls"]

# Specific shorthand targets
alpine = ["native-tls", "debug"]
beaglebone = ["rustls", "colog", "debug"]

[profile.dev]
debug = true
panic = "unwind"
strip = false

# Separate profile for profiling code
[profile.profiling]
inherits = "dev"
codegen-units = 1
debug = true
opt-level = 's'   # size-optimized; keeps loop unrolling and some inlining for MIPS/ARM
panic = "unwind"
strip = false

# This release profile was found in discussions when compiling for mips platforms
# But it probably works on x86 and ARM devices as well, we will see
[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = 's'   # size-optimized; keeps loop unrolling and some inlining for MIPS/ARM
panic = "abort"
strip = true

[lints.rust]
ambiguous_negative_literals = "warn"
missing_debug_implementations = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"

[lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

# These lints are from the `restriction` lint group and prevent specific
# constructs being used in source code in order to drive up consistency,
# quality, and brevity
allow_attributes_without_reason = "warn"
as_pointer_underscore = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
deref_by_slicing = "warn"
disallowed_script_idents = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
fn_to_numeric_cast_any = "warn"
if_then_some_else_none = "warn"
map_err_ignore = "warn"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
semicolon_outside_block = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
unused_result_ok = "warn"

# tokio tasks
large_futures = "warn"

# May cause issues with structured logging otherwise.
literal_string_with_formatting_args = "allow"
