[package]
name = "meshtastic-telemetry-daemon-rs"
version = "0.3.6"
edition = "2024"
license = "MIT"
authors = ["Gatlin Newhouse"]
description = "Daemon to read Meshtastic packets and send telemetry to postgres"
keywords = ["OpenWRT", "AREDN", "Meshtastic"]
readme = "./README.md"
repository = "https://github.com/coffee-and-telesense/meshtastic-telemetry-daemon-rs"
categories = ["command-line-utils"]

[dependencies]
# Handle errors gracefully
anyhow = { version = "1.0", default-features = false }
# Handle clocks, no wasm. "now" enables "std"
chrono = { version = "0.4", default-features = false, features = ["now"] }
# Handle config reading
config = { version = "0.15", default-features = false, features = ["toml"] }
# tokio-console
console-subscriber = { version = "0.5", optional = true }
# Logger
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = [
  "chrono",
  "env-filter",
  "fmt",
] }
tracing-journald = { version = "0.3", optional = true }
# My fork of the meshtastic protocol library with updated protobufs---no serde
meshtastic = { git = "https://github.com/gatlinnewhouse/meshtastic-rust.git", branch = "stable-science-bytes", default-features = false, features = [
  "tokio",
] }
# Config directory handling
microxdg = { version = "0.2" }
# Serialize/deserialize, add deriving trait
serde = { version = "1.0", default-features = false, features = ["derive"] }
# Serialize/deserialze json, mainly print debugging
serde_json = { version = "1.0", default-features = false, features = ["std"] }
# Postgres connection
sqlx = { version = "0.8", default-features = false, features = [
  "postgres",
  "chrono",
  "macros",
  "json",
] }
# Async runtime with `tokio::main`` macro
tokio = { version = "1.50", features = ["macros"] }
mimalloc = { version = "0.1", features = ["v3"], optional = true }

[features]
default = ["debug", "native-tls", "mimalloc"]

# Debugging features
debug = ["anyhow/std", "anyhow/backtrace"] # Print state and backtraces
log_perf = []                              # Print async runtime stats behind feature flag
print-packets = []                         # Pretty print packets
journald = ["dep:tracing-journald"]        # Just `journalctl` to log messages

# Verbose packet logging
trace = []

# tokio-console support
tokio-console = ["dep:console-subscriber", "tokio/tracing"]

# mimalloc
mimalloc = ["dep:mimalloc"]

# TLS config:
native-tls = ["sqlx/runtime-tokio-native-tls"]
rustls = ["sqlx/runtime-tokio-rustls"]

# Specific shorthand targets
alpine = ["native-tls", "debug"]
beaglebone = ["rustls", "debug", "mimalloc"]

[profile.dev]
debug = true
panic = "unwind"
strip = false

# Separate profile for profiling code
[profile.profiling]
inherits = "dev"
codegen-units = 1
debug = true
opt-level = 's'   # Size-optimized; keeps loop unrolling and some inlining for MIPS/ARM
panic = "unwind"
strip = false

# This release profile was found in discussions when compiling for mips platforms
# But it probably works on x86 and ARM devices as well, we will see
[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = 's'   # Size-optimized; keeps loop unrolling and some inlining for MIPS/ARM
panic = "abort"
strip = true

[lints.rust]
ambiguous_negative_literals = "warn"
let_underscore_drop = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
single_use_lifetimes = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"
unreachable_pub = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"
unused_crate_dependencies = "warn"

[lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

# These lints are from the `restriction` lint group and prevent specific
# constructs being used in source code in order to drive up consistency,
# quality, and brevity
absolute_paths = "warn"
alloc_instead_of_core = "warn"
allow_attributes_without_reason = "warn"
as_pointer_underscore = "warn"
assertions_on_result_states = "warn"
cfg_not_test = "warn"
clone_on_ref_ptr = "warn"
cloned_instead_of_copied = "warn"
deref_by_slicing = "warn"
disallowed_script_idents = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
enum_variant_names = "warn"
expect_used = "warn"
filetype_is_file = "warn"
fn_to_numeric_cast_any = "warn"
if_then_some_else_none = "warn"
implicit_clone = "warn"
inefficient_to_string = "warn"
large_enum_variant = "warn"
large_types_passed_by_value = "warn"
map_err_ignore = "warn"
manual_let_else = "warn"
module_name_repetitions = "warn"
needless_pass_by_value = "warn"
panic = "warn"
pathbuf_init_then_push = "warn"
pub_without_shorthand = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
redundant_clone = "warn"
redundant_type_annotations = "warn"
ref_patterns = "warn"
renamed_function_params = "warn"
rest_pat_in_fully_bound_structs = "warn"
semicolon_outside_block = "warn"
str_to_string = "warn"
string_lit_chars_any = "warn"
todo = "warn"
undocumented_unsafe_blocks = "warn"
unimplemented = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
unused_result_ok = "warn"
unused_trait_names = "warn"
unwrap_used = "warn"
verbose_file_reads = "warn"

# tokio tasks
large_futures = "warn"
unused_async = "warn"

# May cause issues with structured logging otherwise.
literal_string_with_formatting_args = "allow"

# clippy nursery lints (lints which are buggy or need more work)
as_ptr_cast_mut = "warn"
branches_sharing_code = "warn"
clear_with_drain = "warn"
coerce_container_to_any = "warn"
collection_is_never_read = "warn"
debug_assert_with_mut_call = "deny"
equatable_if_let = "warn"
fallible_impl_from = "warn"
future_not_send = "warn"
iter_on_empty_collections = "warn"
iter_on_single_items = "warn"
large_stack_frames = "warn"
missing_const_for_fn = "warn"
needless_pass_by_ref_mut = "warn"
nonstandard_macro_braces = "warn"
path_buf_push_overwrite = "warn"
while_float = "warn"
